# hyperscan

./: .gitignore  CMakeLists.txt  Parser.c  report.json  report2.json
doc/: AST.d.ts  AST.md  build-troubleshoot-windows.md  regex-decomposition.html  regex-decomposition.md  tasks.md
examples/: CMakeLists.txt  dump.cpp  dump_nfa.cpp  dump_rose copy.cpp  dump_rose.cpp
examples/utils/: string_processing.cpp  string_processing.h
hs_dumps/: Expr_0_componenttree_orig.txt  rose.dot  rose.txt  rose_components.csv  rose_literals.txt  rose_pre_norm.dot  smallwrite.txt
hs_dumps/a-star-b/: Expr_0_componenttree_opt.txt  lit_table_floating.txt  rose_components.txt  rose_floating_test_literals.txt  rose_last_flush_comb_programs.txt  rose_lit_programs.txt  rose_struct.txt
hs_dumps/hat-a-star-b/: Expr_0_00_before_asserts.dot  Expr_0_01_initial.dot  Expr_0_componenttree_orig.txt  internal_reports.txt  rose.dot  rose.txt  rose_components.csv  rose_components.txt  rose_exhaust.csv  rose_literals.txt  rose_nfa_0.dot  rose_nfa_0.txt  rose_struct.txt  smallwrite.txt  smallwrite_nfa.dot  smallwrite_nfa.txt  ssm.txt
hs_dumps/test-string/: Expr_0_00_before_asserts.dot  Expr_0_02_post_assert_resolve.dot  Expr_0_componenttree_orig.txt  internal_reports.txt  lit_table_floating.txt  post_ensure_rose.dot  post_prefix_rose.dot  pre_prefix_rose.dot  pre_rose_0.dot  pre_rose_1.dot  rose.dot  rose.txt  rose_components.csv  rose_components.txt  rose_eod_programs.txt  rose_floating_test_literals.txt  rose_flush_comb_programs.txt  rose_lit_programs.txt  rose_literals.txt  rose_nfa_0.dot  rose_nfa_0.txt  rose_pre_norm.dot  rose_report_programs.txt  rose_struct.txt  smallwrite.txt  smallwrite_nfa.dot  smallwrite_nfa.txt  som_rev_components.txt
report/: main.aux  main.blg  main.fdb_latexmk  main.fls  main.out  main.tex  refs.bib  setup.tex  test-string.json  test.json
report/sections/: 1.tex  2.tex
scripts/: RegexASTVisitor.py  RegexMLE.py  download_dataset.py  dump.py  graph-analysis-statistics.py  graph-statistics.ipynb  markov-bst-mle.py  regex_ast.py  test_nodecounter.py  test_regex_ast_fix.py  train_bst.py
scripts/utils/: string.py
src/: hs.cpp  runtime.c
src/nfa/: goughcompile.cpp  nfa_api.h
src/nfagraph/: ng_anchored_dots.cpp  ng_violet.cpp
src/parser/: AsciiComponentClass.h
src/rose/: match.c  (+1 more)
(+5 files in other folders)
